fixed tech grid alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,7 @@ body {
 }
 
 .tech {
-  display: flex;
-  align-items: left;
+  align-items: center;
 }
 
 .grid {
